@@ -72,10 +72,10 @@ if [ $# -ne 0 ] ; then
   done
 else
   compile_and_run Cartesian
+  compile_and_run Dimension
   compile_and_run Filtered_cartesian
   compile_and_run Filtered_homogeneous
   compile_and_run Homogeneous
-  compile_and_run known_bit_size_integers
   compile_and_run Simple_cartesian
   compile_and_run Simple_homogeneous
   compile_and_run test_kernel_archetype_2
