@@ -1,6 +1,7 @@
 4 August 2005 Sylvain Pion
 - Move Twotuple, Threetuple, Fourtuple, Sixtuple to STL_Extension.
 - Remove unused New_delete_allocator.h .
+- Move CGAL/known_bit_size_integers.h to Number_types.
 
 1 August 2005 Sylvain Pion
 - Remove CGAL/misc.h (provided convert(), to be replaced by NT_converter).
